Fix menu jumpiness.

--- a/public/style/partials/menu.styl
+++ b/public/style/partials/menu.styl
@@ -2,10 +2,11 @@
   padding 0 40px
   clearfix()
   .menuitem
+    hover-padding = 1px
     display block
     float left
-    padding 10px
-    margin-right 10px
+    padding 12px
+    margin 0 10px (hover-padding * 2) 0
     border-radius(0 0 8px 8px)
     font-size 1.2em
     background-color blue
@@ -17,4 +18,5 @@
       background-color green
       vertical-gradient(green, green-bright)
     &.active:hover
-      padding @padding + 1
+      margin 0 (10px - hover-padding * 2) 0 0
+      padding @padding + hover-padding
